them mot so phan valid date

--- a/src/app/components/headers/header-2/header-2.component.html
+++ b/src/app/components/headers/header-2/header-2.component.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 </div>
-<div class="placeholder" style="height: 45px"></div>
+<div class="placeholder" ></div>
 
 
 <modal #changePassModal size='sm' cssClass="my-modal-login" backdrop="false">
