--- a/src/app/personnels/search-statistic/statistic/statistic-retired/statistic-retired.component.html
+++ b/src/app/personnels/search-statistic/statistic/statistic-retired/statistic-retired.component.html
@@ -1,6 +1,5 @@
 <app-statistic-table [data]="data" title="Danh sách cán bộ nghỉ hưu"
                      [fields]="fields"
-                     (onClick)="clickHandler($event)"
-                     (onExport)="exportHandler($event)"></app-statistic-table>
+                     (onClick)="clickHandler($event)"></app-statistic-table>
 
 <app-procedure-detail #detailProcedure [detail]="detail"></app-procedure-detail>
