--- a/src/app/components/headers/header-2/header-2.component.css
+++ b/src/app/components/headers/header-2/header-2.component.css
@@ -56,4 +56,11 @@
   height: 40px;
   border-radius: 50%;
 }
-
+.placeholder {
+  height: 45px;
+}
+@media (max-width: 767px) {
+  .placeholder {
+    height: 70px !important;
+  }
+}
