--- a/src/app/personnels/info-person/salary-brief/salary-brief.component.html
+++ b/src/app/personnels/info-person/salary-brief/salary-brief.component.html
@@ -106,6 +106,11 @@
             <div class="error" *ngIf="dateFrom.value.trim()  =='' && formTouch" >
               Chưa nhập từ ngày
             </div>
+
+            <div class="error" *ngIf="compareDate(dateFrom.value,dateEnd.value) >= 0 && formTouch" >
+               Ngày bắt đầu phải nhỏ hơn ngày kết thúc
+            </div>
+
           </div>
           <!---->
           <div class="item-control">
