--- a/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
+++ b/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
@@ -137,7 +137,7 @@
   </modal-body>
 
   <modal-footer>
-    <button class="btn-action" (click)="onSave(formData)">{{positionUpdate == null?'Thêm':'Cập nhật'}}</button>
+    <button class="btn-action" (click)="onSave()">{{positionUpdate == null?'Thêm':'Cập nhật'}}</button>
   </modal-footer>
 
 </modal>
