--- a/src/app/personnels/manager-catalog/catalog-rank/catalog-rank.component.css
+++ b/src/app/personnels/manager-catalog/catalog-rank/catalog-rank.component.css
@@ -10,6 +10,7 @@ tbody tr:last-child:hover {
 
 h3 {
   font-size: 18px;
+  margin-bottom:5px;
 }
 
 .msg {
@@ -17,4 +18,10 @@ h3 {
   z-index: 88;
   width: 50%;
   right: 25%;
+}
+
+input{
+  margin-left:auto;
+  margin-bottom:15px;
+  margin-top:15px;
 }
