--- a/src/app/personnels/manager-catalog/catalog-rank/catalog-rank.component.html
+++ b/src/app/personnels/manager-catalog/catalog-rank/catalog-rank.component.html
@@ -9,6 +9,11 @@
 
   <div class="col-xs-12 col-sm-12">
     <h3 class="fs-18 text-center">Danh sách loại nghạch</h3>
+    <div class="row" *ngIf="catalogRanks.size()>0">
+      <div class="col-xs-12 text-right">
+        <input type="text" placeholder="Nhập để tìm kiếm..." class="form-control" [(ngModel)]="pipe.specie">
+      </div>
+    </div>
     <div class="table-responsive">
       <table class="table table-bordered" [mfData]="catalogRanks.toArray()" #mfDetail="mfDataTable" [mfRowsOnPage]="10">
         <thead>
@@ -23,7 +28,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let item of mfDetail.data;let i = index ">
+        <tr *ngFor="let item of  mfDetail.data | searchPipe:pipe.specie;let i = index ">
           <td (click)="openSpiece(item)">{{i+1}}</td>
           <td class="name" (click)="openSpiece(item)">{{item.name}}</td>
           <td style="width:10%">
@@ -47,7 +52,15 @@
   <div class="col-xs-12 col-sm-12">
     <h3 class="fs-18 text-center" *ngIf="spiceCurrent">Danh sách nhóm ngạch thuộc loại ngạch:
       {{spiceCurrent.name}}</h3>
-    <h3 class="fs-18 text-center" *ngIf="listGroup.size() == 0 && !spiceCurrent">Danh sách nhóm ngạch thuộc loại ngạch</h3>
+    <h3 class="fs-18 text-center" *ngIf="listGroup.size() == 0 && !spiceCurrent">Danh sách nhóm ngạch thuộc loại
+      ngạch</h3>
+
+    <div class="row" *ngIf="listGroup.size()  >0">
+      <div class="col-xs-12 text-right">
+        <input type="text" placeholder="Nhập để tìm kiếm..." class="form-control" [(ngModel)]="pipe.group">
+      </div>
+    </div>
+
     <div class="table-responsive">
       <table class="table table-bordered" [mfData]="listGroup.toArray()" #mfGroup="mfDataTable" [mfRowsOnPage]="10">
         <thead>
@@ -63,7 +76,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let item of mfGroup.data;let i = index ">
+        <tr *ngFor="let item of mfGroup.data | searchPipe:pipe.group;let i = index ">
           <td (click)="openGroup(item)">{{i+1}}</td>
           <td class="name" (click)="openGroup(item)">{{item.name}}</td>
           <td style="width:10%">
@@ -90,6 +103,13 @@
       {{spiceCurrent?spiceCurrent.name:''}}</h3>
     <h3 class="fs-18 text-center" *ngIf="listRank.size() == 0">Danh sách ngạch thuộc nhóm
       {{groupCurrent?groupCurrent.name:''}}</h3>
+
+    <div class="row" *ngIf="listRank.size() > 0">
+      <div class="col-xs-12 text-right">
+        <input type="text" placeholder="Nhập để tìm kiếm..." class="form-control" [(ngModel)]="pipe.rank">
+      </div>
+    </div>
+
     <div class="table-responsive">
       <table class="table table-bordered" [mfData]="listRank.toArray()" #mfRank="mfDataTable" [mfRowsOnPage]="10">
         <thead>
@@ -105,7 +125,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let item of mfRank.data;let i = index ">
+        <tr *ngFor="let item of mfRank.data | searchPipe:pipe.rank;let i = index ">
           <td>{{i+1}}</td>
           <td class="name">{{item}}</td>
           <td style="width:10%">
@@ -130,6 +150,13 @@
       {{groupCurrent?groupCurrent.name:''}} của loại ngạch:
       {{spiceCurrent?spiceCurrent.name:''}}</h3>
     <h3 class="fs-18 text-center" *ngIf="level.size() == 0">Danh sách bậc và hệ số lương</h3>
+
+    <div class="row" *ngIf="level.size() > 0">
+      <div class="col-xs-12 text-right">
+        <input type="text" placeholder="Nhập để tìm kiếm..." class="form-control" [(ngModel)]="pipe.level">
+      </div>
+    </div>
+
     <div class="table-responsive">
       <table class="table table-bordered" [mfData]="level.toArray()" #mfLevel="mfDataTable" [mfRowsOnPage]="10">
         <thead>
@@ -147,7 +174,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let item of mfLevel.data;let i = index ">
+        <tr *ngFor="let item of mfLevel.data |  searchPipe:pipe.level;let i = index ">
           <td>{{i+1}}</td>
           <td class="name">{{item.name}}</td>
           <td class="name">{{item.salary}}</td>
