--- a/src/app/personnels/manager-personnels/add-personnel/add-personnel.component.html
+++ b/src/app/personnels/manager-personnels/add-personnel/add-personnel.component.html
@@ -122,7 +122,7 @@
         </div>
 
         <button (click)="onSubmit()" type="submit">Thêm mới</button>
-        <button (click)="resetForm(formData)">Xóa</button>
+        <button (click)="resetForm()">Xóa</button>
       </div>
     </div>
   </div>
