--- a/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.html
+++ b/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.html
@@ -119,7 +119,7 @@
             {{message.content}}
           </div>
           <button (click)="onSubmit()" type="submit">Cập nhật</button>
-          <button (click)="resetForm(formData)">Xóa</button>
+          <button (click)="resetForm()">Xóa</button>
         </div>
       </div>
       <div class="clearfix"></div>
