--- a/src/app/personnels/manager-personnels/user-manager/user-manager.component.html
+++ b/src/app/personnels/manager-personnels/user-manager/user-manager.component.html
@@ -1,4 +1,4 @@
-<app-search-form title="Giao nhiệm vụ" [showRole]="true" (onChoise)="onChoiseHandler($event)"></app-search-form>
+<app-search-form title="Giao nhiệm vụ" [showLeaveBindRetire]="true" [showRole]="true" (onChoise)="onChoiseHandler($event)"></app-search-form>
 
 <modal #modal size='lg' backdrop="false">
 
