--- a/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
+++ b/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
@@ -25,8 +25,8 @@
     <tbody>
     <tr *ngFor="let item of mf.data;let i = index ">
       <td>{{i+1}}</td>
-      <td class="name upper-case">{{item.code}}</td>
-      <td class="name first-upper-case">{{item.name.toLowerCase()}}</td>
+      <td class="name upper-case" (click)="viewDetail(item)">{{item.code}}</td>
+      <td class="name first-upper-case" (click)="viewDetail(item)">{{item.name.toLowerCase()}}</td>
       <td class="name"><a [href]="item.url" target="_blank">{{item.url}}</a></td>
       <td style="width:10%">
         <span class="action-icon" title="Chi tiết " (click)="viewDetail(item)"><i class="fa fa-eye"
