--- a/src/app/personnels/manager-personnels/role-manager/role-manager.component.css
+++ b/src/app/personnels/manager-personnels/role-manager/role-manager.component.css
@@ -1,4 +1,17 @@
-input[type='text'],textarea {
+input[type='text'], textarea {
   width: 100% !important;
   max-width: 100% !important;
+}
+
+tr td {
+  padding:  5px !important;
+}
+tbody tr:hover {
+  background-color: #eae7df;
+  cursor: pointer;
+}
+
+tbody tr:last-child:hover {
+  background-color: transparent;
+  cursor: default;
 }
